--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,5 +35,5 @@ jobs:
           protocol: ftp
           port: 21
           local-dir: frontend/dist/
-          server-dir: ./ 
+          server-dir: domains/bonydatta.com/public_html/
           dangerous-clean-slate: true
